--- a/style.css
+++ b/style.css
@@ -15,11 +15,105 @@
   margin: auto;
 }
 
+header {
+  background: #000;
+  position: fixed;
+  width: 100%;
+  /* margin-top: auto; */
+  nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    h4 {
+      color: #fff;
+      font-size: 28px;
+      span {
+        color: var(--main_color);
+      }
+    }
+    ul {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      list-style: none;
+      a {
+        display: block;
+        margin-right: 10px;
+        /* background-color: #ff8800; */
+        padding: 10px;
+        margin-top: 4px;
+        margin-bottom: 4px;
+        text-decoration: none;
+        color: #fff;
+        border-radius: 4px;
+        font-size: 18px;
+      }
+    }
+  }
+}
+
+.HeroHader {
+  background: url(./img/banner.jpg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
+  height: 100vh;
+  .container {
+    position: relative;
+    height: 100%;
+    .box {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      position: absolute;
+      z-index: 999;
+      top: 50%;
+      transform: translatey(-50%);
+      .lift {
+        width: 50%;
+        .HeroHaderBorder {
+          width: 20%;
+          margin: 10px 0;
+        }
+        h4 {
+          color: #fff;
+          font-size: 28px;
+          span {
+            color: var(--main_color);
+          }
+        }
+        p {
+          color: #fff;
+        }
+        .dis {
+          margin-top: 15px;
+          color: var(--text-color);
+        }
+        a {
+          background: transparent;
+          padding: 10px 40px;
+          margin-top: 40px;
+          border-radius: 10px;
+          display: inline-block;
+          color: #fff;
+          border: 1px solid var(--text-color);
+          text-decoration: none;
+          transition: 0.5s;
+          font-size: 18px;
+          &:hover {
+            background-color: var(--text-color);
+            color: #000;
+          }
+        }
+      }
 
 
 
-
-
+      
+    }
+  }
+}
 /*====> socil media  <======*/
 
 .socilmediaSEC {
