--- a/style.css
+++ b/style.css
@@ -108,9 +108,46 @@ header {
         }
       }
 
+      .conactForm {
+        background: #fff;
+        text-align: center;
+        border-radius: 6px;
+        width: 350px;
+        margin: auto;
+        h3 {
+          background-color: #ddd;
+          color: #222;
+          font-size: 20px;
+          padding: 20px;
+          span {
+            color: var(--main_color);
+          }
+        }
 
-
-      
+        form {
+          margin: 30px 0 0 0;
+          input {
+            display: block;
+            width: 80%;
+            margin: 20px auto;
+            height: 30px;
+            padding: 10px;
+            font-size: 15px;
+            border: none;
+            border-bottom: 1px solid #ccc;
+            &:focus {
+              outline: none;
+            }
+          }
+          button {
+            width: 100%;
+            height: 50px;
+            border: none;
+            background: var(--main_color);
+            color: #fff;
+          }
+        }
+      }
     }
   }
 }
@@ -145,6 +182,61 @@ header {
           color: #e7e7e7;
           font-size: 40px;
         }
+      }
+    }
+  }
+}
+
+.Sub-list-section {
+  .Box {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    .card .title {
+      h3 {
+        font-size: 20px;
+        text-align: center;
+      }
+      p {
+        font-size: 16px;
+        color: var(--text-color);
+        margin-bottom: 30px;
+      }
+    }
+  }
+  .card {
+    width: 50%;
+  }
+  img {
+    width: 100%;
+  }
+  .row {
+    display: flex;
+    align-items: center;
+    /* justify-content: space-between; */
+    .icon {
+      margin-right: 20px;
+      i {
+        width: 60px;
+        height: 60px;
+        font-size: 28px;
+        line-height: 2;
+        text-align: center;
+        color: var(--main_color);
+        border: 2px solid var(--main_color);
+        border-radius: 50%;
+      }
+    }
+
+    .info {
+      width: 80%;
+      h5 {
+        font-size: 20px;
+        font-weight: bold;
+      }
+      p {
+        margin-top: 20px;
+        color: #ccc;
       }
     }
   }
